# mold_link_optinizer

./: .code-workspace  CMakeLists.txt  main.cpp
header/: header.h
init/: a.cpp  b.cpp  init.cpp  init.h
marco/: marco.h
